--- a/TACO/packages/repositories.config
+++ b/TACO/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\TACO.Model\packages.config" />
   <repository path="..\TACO\packages.config" />
 </repositories>
