--- a/TACO/TACO.Model/TACO.Model.csproj
+++ b/TACO/TACO.Model/TACO.Model.csproj
@@ -90,7 +90,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Attraction.cs" />
     <Compile Include="Domain\Audio.cs" />
+    <Compile Include="Domain\IndoorPOI.cs" />
     <Compile Include="Domain\POI.cs" />
     <Compile Include="Domain\Text.cs" />
     <Compile Include="Domain\Video.cs" />
