--- a/TACO/TACO.Model/TACO.Model.csproj
+++ b/TACO/TACO.Model/TACO.Model.csproj
@@ -96,15 +96,21 @@
     <Compile Include="Domain\POI.cs" />
     <Compile Include="Domain\Text.cs" />
     <Compile Include="Domain\Video.cs" />
+    <Compile Include="Domain\WifiMeassure.cs" />
     <Compile Include="IoC\CastleWindsorInitializer.cs" />
     <Compile Include="IoC\Installers\ControllerInstaller.cs" />
     <Compile Include="IoC\Installers\TaskInstaller.cs" />
     <Compile Include="IoC\MVC\WindsorControllerFactory.cs" />
+    <Compile Include="Mapping\AttractionMap.cs" />
+    <Compile Include="Mapping\IndoorPOIMap.cs" />
     <Compile Include="Mapping\POIMap.cs" />
     <Compile Include="Mapping\TextMap.cs" />
+    <Compile Include="Mapping\WifiMeassureMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tasks\Abstract\IIndoorTasks.cs" />
     <Compile Include="Tasks\Abstract\IPointTasks.cs" />
     <Compile Include="Tasks\Abstract\ITextTasks.cs" />
+    <Compile Include="Tasks\Concrete\IndoorTasks.cs" />
     <Compile Include="Tasks\Concrete\PointTasks.cs" />
     <Compile Include="Tasks\Concrete\TextTasks.cs" />
     <Compile Include="Utilities\DatabaseConfig.cs" />
